--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
      <div class="irene">
         <div class="right">
-        <img class="./images/image-irene.jpg" alt="">
+        <img class="imgs" src="./images/image-irene.jpg" alt="">
         <h3>Irene Roberts <br><span class="spans2">Verified Buyer</span></h3></div>
         <p>"Customer service is always excelent<br> and very quick turn around.
             Completely<br> delighted with the simlicity of the <br>
